--- a/src/styles/ticket.less
+++ b/src/styles/ticket.less
@@ -95,9 +95,10 @@
 		.cancel {
 			color: @local_negative_colour;
 			display: block;
-			padding: 0 5px;
-			line-height: 1.2em;
-			.small;
+			font-size: 1.3em;
+			font-weight: bold;
+			line-height: .9em;
+			padding: 0 4px;
 		}
 
 		&.hover {
@@ -106,9 +107,10 @@
 	}
 
 	.selectionName {
+		color: @local_positive_colour;
 		font-size: 1.4em;
 		font-weight: bold;
-		color: @local_positive_colour;
+		width: 85%;
 	}
 
 	.placementDetails {
