--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -1,10 +1,6 @@
 .paperShadow {
-	-webkit-box-shadow: 0px 3px 5px 0px rgba(5, 5, 5, 0.3);
-    -moz-box-shadow:    0px 3px 5px 0px rgba(5, 5, 5, 0.3);
-    box-shadow:         0px 3px 5px 0px rgba(5, 5, 5, 0.3);
+	.box-shadow(0px 3px 5px 0px rgba(5, 5, 5, 0.75));
 }
 .paperShadow-inset {
-	-webkit-box-shadow: inset 0px 3px 5px 0px rgba(5, 5, 5, 0.15);
-    -moz-box-shadow:    inset 0px 3px 5px 0px rgba(5, 5, 5, 0.15);
-    box-shadow:         inset 0px 3px 5px 0px rgba(5, 5, 5, 0.15);
+	.box-shadow(inset 0px 3px 5px 0px rgba(5, 5, 5, 0.15));
 }
